# benny-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: db.rs  http.rs  main.rs  slash.rs  state.rs
src/cogs/: base.rs  mod.rs  prefixes.rs
